--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
   <title>My GitHub Pages Site</title>
   <link rel="stylesheet" href="style.css">
-</head>
+</head> 
+<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/145064592.js"></script>
+<!-- End of HubSpot Embed Code -->
 <body>
-  <h1>Welcome to lemsluxfit!</h1>
+  <h1>Welcome to lemsluxfit
+
+Kindly tell us how we may assist you!</h1>
   <script src="script.js"></script>
 </body>
 </html>
